--- a/src/index.html
+++ b/src/index.html
@@ -44,10 +44,12 @@
 							<div class="menu__body">
 								<ul class="menu__list">
 									<li class="menu__item">
+										<span class="menu__arrow"></span>
 										<a href="#" class="menu__link menu__link-arrow"><span>Home</span></a>
+										
 										<ul class="menu__sublist">
 											<li class="menu__subitem">
-												<a href="#" class="menu__sublink">Home</a>
+												<a href="#" class="menu__sublink"><span>Home</span></a>
 											</li>
 											<li class="menu__subitem">
 												<a href="#" class="menu__sublink">Home</a>
@@ -58,6 +60,7 @@
 										</ul>
 									</li>
 									<li class="menu__item">
+										<span class="menu__arrow"></span>
 										<a href="#" class="menu__link menu__link-arrow"><span>About</span></a>
 										<ul class="menu__sublist">
 											<li class="menu__subitem">
@@ -72,6 +75,7 @@
 										</ul>
 									</li>
 									<li class="menu__item">
+										<span class="menu__arrow"></span>
 										<a href="#" class="menu__link menu__link-arrow"><span>Products</span></a>
 										<ul class="menu__sublist">
 											<li class="menu__subitem">
