--- a/src/index.html
+++ b/src/index.html
@@ -110,7 +110,9 @@
 					</div>
 				</div>
 			</header>
-
+			<div class="page__content">
+				
+			</div>
 			<footer class="footer">
 
 			</footer>
