--- a/src/index.html
+++ b/src/index.html
@@ -111,10 +111,11 @@
 				</div>
 			</header>
 			<div class="page__content">
-				
+				<section class="intro">
+					
+				</section>
 			</div>
 			<footer class="footer">
-
 			</footer>
 		</main>
 	</div>
