--- a/src/index.html
+++ b/src/index.html
@@ -112,7 +112,16 @@
 			</header>
 			<div class="page__content">
 				<section class="intro">
-					
+					<div class="intro__container container">
+						<h1 class="intro__title">Smart crytocurrency <br> for gaming & stock trading	</h1>
+						<div class="intro__row">
+							<a href="#" class="intro__text"><span>why choose bitmin?</span></a>
+							<a href="#" class="intro__play"></a>
+							<a href="#" class="intro__text"><span>watch now</span></a>
+						</div>
+						<div class="intro__img ibg"><img src="img/phone.png" alt="phone"></div>
+					</div>
+					<div class="intro__bg ibg"><img src="img/main_bg.png" alt="main_bg"></div>
 				</section>
 			</div>
 			<footer class="footer">
