--- a/src/index.html
+++ b/src/index.html
@@ -123,6 +123,66 @@
 					</div>
 					<div class="intro__bg ibg"><img src="img/main_bg.png" alt="main_bg"></div>
 				</section>
+				<section class="price">
+					<div class="price__container container">
+						<h2 class="price__title title">Cryptocurrency Price Capitalizations</h2>
+						<div class="price__text">Cras mattis consectetur purus sit amet fermentum. Cras justo odio, dapibus ac facilisis in, egestas eget quam praesent commodo cursus magna.</div>
+						<div class="price__row">
+							<div class="price__item item-price">
+								<div class="item-price__body">
+									<div class="item-price__icon"><img src="img/price/bitcoin.png" alt="bitcoin"></div>
+									<div class="item-price__row-top">
+										<div class="item-price__title">Bitcoin</div>
+										<div class="item-price__price"><span>$</span>11,354.00</div>
+									</div>
+									<div class="item-price__tabs tabs-item-price">
+										<div class="tabs-item-price__body">
+											<div class="tabs-item-price__content content-item">
+												<div class="content-item__row">
+													<div class="content-item__title">Btc/usd</div>
+													<div class="content-item__percent">-1.04%</div>
+												</div>
+												<div class="content-item__img ibg"><img src="img/price/chart.png" alt="chart"></div>
+											</div>
+											<div class="tabs-item-price__content content-item">
+												<div class="content-item__row">
+													<div class="content-item__title">Btc/usd</div>
+													<div class="content-item__percent">-1.04%</div>
+												</div>
+												<div class="content-item__img ibg"><img src="img/price/chart_2.png" alt="chart"></div>
+											</div>
+											<div class="tabs-item-price__content content-item">
+												<div class="content-item__row">
+													<div class="content-item__title">Btc/usd</div>
+													<div class="content-item__percent">-1.04%</div>
+												</div>
+												<div class="content-item__img ibg"><img src="img/price/chart_3.png" alt="chart"></div>
+											</div>
+											<div class="tabs-item-price__content content-item">
+												<div class="content-item__row">
+													<div class="content-item__title">Btc/usd</div>
+													<div class="content-item__percent">-1.04%</div>
+												</div>
+												<div class="content-item__img ibg"><img src="img/price/chart_4.png" alt="chart"></div>
+											</div>
+										</div>
+										<div class="tabs-item-price__header">
+											<div class="tabs-item-price__navitem active">Hour</div>
+											<div class="tabs-item-price__navitem">Day</div>
+											<div class="tabs-item-price__navitem">Week</div>
+											<div class="tabs-item-price__navitem">Month</div>
+										</div>
+									</div>
+								</div>
+								<div class="item-price__footer footer-price">
+									<div class="footer-price__title">24h Volume</div>
+									<div class="footer-price__price">$ 7.02 B</div> 
+								</div>
+							</div>
+							
+						</div>
+					</div>
+				</section>
 			</div>
 			<footer class="footer">
 			</footer>
