--- a/src/index.html
+++ b/src/index.html
@@ -113,7 +113,7 @@
 			<div class="page__content">
 				<section class="intro">
 					<div class="intro__container container">
-						<h1 class="intro__title">Smart crytocurrency <br> for gaming & stock trading	</h1>
+						<h1 class="intro__title">Smart crytocurrency <br> for gaming & stock trading </h1>
 						<div class="intro__row">
 							<a href="#" class="intro__text"><span>why choose bitmin?</span></a>
 							<a href="#" class="intro__play"></a>
@@ -125,61 +125,199 @@
 				</section>
 				<section class="price">
 					<div class="price__container container">
-						<h2 class="price__title title">Cryptocurrency Price Capitalizations</h2>
-						<div class="price__text">Cras mattis consectetur purus sit amet fermentum. Cras justo odio, dapibus ac facilisis in, egestas eget quam praesent commodo cursus magna.</div>
+						<div class="price__header">
+							<h2 class="price__title title">Cryptocurrency Price Capitalizations</h2>
+							<div class="price__text">Cras mattis consectetur purus sit amet fermentum. Cras justo odio, dapibus
+								ac
+								facilisis in, egestas eget quam praesent commodo cursus magna.</div>
+						</div>
 						<div class="price__row">
-							<div class="price__item item-price">
-								<div class="item-price__body">
-									<div class="item-price__icon"><img src="img/price/bitcoin.png" alt="bitcoin"></div>
-									<div class="item-price__row-top">
-										<div class="item-price__title">Bitcoin</div>
-										<div class="item-price__price"><span>$</span>11,354.00</div>
-									</div>
-									<div class="item-price__tabs tabs-item-price">
-										<div class="tabs-item-price__body">
-											<div class="tabs-item-price__content content-item">
-												<div class="content-item__row">
-													<div class="content-item__title">Btc/usd</div>
-													<div class="content-item__percent">-1.04%</div>
+							<div class="price__column">
+								<div class="price__item item-price">
+									<div class="item-price__body">
+										<div class="item-price__icon"><img src="img/price/bitcoin.png" alt="bitcoin"></div>
+										<div class="item-price__header">
+											<div class="item-price__currency">Bitcoin</div>
+											<div class="item-price__volume"><span>$</span> 11,354.00</div>
+										</div>
+										<div class="item-price__tabs tabs-price">
+											<div class="tabs-price__content content-price">
+												<div class="content-price__header">
+													<div class="content-price__currency">Btc/usd</div>
+													<div class="content-price__volume">-1.04%</div>
 												</div>
-												<div class="content-item__img ibg"><img src="img/price/chart.png" alt="chart"></div>
+												<div class="content-price__chart ibg"><img src="img/price/chart.png" alt="chart">
+												</div>
 											</div>
-											<div class="tabs-item-price__content content-item">
-												<div class="content-item__row">
-													<div class="content-item__title">Btc/usd</div>
-													<div class="content-item__percent">-1.04%</div>
-												</div>
-												<div class="content-item__img ibg"><img src="img/price/chart_2.png" alt="chart"></div>
-											</div>
-											<div class="tabs-item-price__content content-item">
-												<div class="content-item__row">
-													<div class="content-item__title">Btc/usd</div>
-													<div class="content-item__percent">-1.04%</div>
-												</div>
-												<div class="content-item__img ibg"><img src="img/price/chart_3.png" alt="chart"></div>
-											</div>
-											<div class="tabs-item-price__content content-item">
-												<div class="content-item__row">
-													<div class="content-item__title">Btc/usd</div>
-													<div class="content-item__percent">-1.04%</div>
-												</div>
-												<div class="content-item__img ibg"><img src="img/price/chart_4.png" alt="chart"></div>
+											<div class="tabs-price__tab tab-nav-price">
+												<div class="tab-nav-price__item active">Hour</div>
+												<div class="tab-nav-price__item">Day</div>
+												<div class="tab-nav-price__item">Week</div>
+												<div class="tab-nav-price__item">Month</div>
 											</div>
 										</div>
-										<div class="tabs-item-price__header">
-											<div class="tabs-item-price__navitem active">Hour</div>
-											<div class="tabs-item-price__navitem">Day</div>
-											<div class="tabs-item-price__navitem">Week</div>
-											<div class="tabs-item-price__navitem">Month</div>
-										</div>
 									</div>
-								</div>
-								<div class="item-price__footer footer-price">
-									<div class="footer-price__title">24h Volume</div>
-									<div class="footer-price__price">$ 7.02 B</div> 
+									<div class="item-price__footer footer-price">
+										<div class="footer-price__text">24h Volume</div>
+										<div class="footer-price__volume">$ 7.02 B</div>
+									</div>
 								</div>
 							</div>
-							
+							<div class="price__column">
+								<div class="price__item item-price">
+									<div class="item-price__body">
+										<div class="item-price__icon"><img src="img/price/bitcoin.png" alt="bitcoin"></div>
+										<div class="item-price__header">
+											<div class="item-price__currency">Bitcoin</div>
+											<div class="item-price__volume"><span>$</span> 11,354.00</div>
+										</div>
+										<div class="item-price__tabs tabs-price">
+											<div class="tabs-price__content content-price">
+												<div class="content-price__header">
+													<div class="content-price__currency">Btc/usd</div>
+													<div class="content-price__volume">-1.04%</div>
+												</div>
+												<div class="content-price__chart ibg"><img src="img/price/chart.png" alt="chart">
+												</div>
+											</div>
+											<div class="tabs-price__tab tab-nav-price">
+												<div class="tab-nav-price__item active">Hour</div>
+												<div class="tab-nav-price__item">Day</div>
+												<div class="tab-nav-price__item">Week</div>
+												<div class="tab-nav-price__item">Month</div>
+											</div>
+										</div>
+									</div>
+									<div class="item-price__footer footer-price">
+										<div class="footer-price__text">24h Volume</div>
+										<div class="footer-price__volume">$ 7.02 B</div>
+									</div>
+								</div>
+							</div>
+							<div class="price__column">
+								<div class="price__item item-price">
+									<div class="item-price__body">
+										<div class="item-price__icon"><img src="img/price/bitcoin.png" alt="bitcoin"></div>
+										<div class="item-price__header">
+											<div class="item-price__currency">Bitcoin</div>
+											<div class="item-price__volume"><span>$</span> 11,354.00</div>
+										</div>
+										<div class="item-price__tabs tabs-price">
+											<div class="tabs-price__content content-price">
+												<div class="content-price__header">
+													<div class="content-price__currency">Btc/usd</div>
+													<div class="content-price__volume">-1.04%</div>
+												</div>
+												<div class="content-price__chart ibg"><img src="img/price/chart.png" alt="chart">
+												</div>
+											</div>
+											<div class="tabs-price__tab tab-nav-price">
+												<div class="tab-nav-price__item active">Hour</div>
+												<div class="tab-nav-price__item">Day</div>
+												<div class="tab-nav-price__item">Week</div>
+												<div class="tab-nav-price__item">Month</div>
+											</div>
+										</div>
+									</div>
+									<div class="item-price__footer footer-price">
+										<div class="footer-price__text">24h Volume</div>
+										<div class="footer-price__volume">$ 7.02 B</div>
+									</div>
+								</div>
+							</div>
+							<div class="price__column">
+								<div class="price__item item-price">
+									<div class="item-price__body">
+										<div class="item-price__icon"><img src="img/price/bitcoin.png" alt="bitcoin"></div>
+										<div class="item-price__header">
+											<div class="item-price__currency">Bitcoin</div>
+											<div class="item-price__volume"><span>$</span> 11,354.00</div>
+										</div>
+										<div class="item-price__tabs tabs-price">
+											<div class="tabs-price__content content-price">
+												<div class="content-price__header">
+													<div class="content-price__currency">Btc/usd</div>
+													<div class="content-price__volume">-1.04%</div>
+												</div>
+												<div class="content-price__chart ibg"><img src="img/price/chart.png" alt="chart">
+												</div>
+											</div>
+											<div class="tabs-price__tab tab-nav-price">
+												<div class="tab-nav-price__item active">Hour</div>
+												<div class="tab-nav-price__item">Day</div>
+												<div class="tab-nav-price__item">Week</div>
+												<div class="tab-nav-price__item">Month</div>
+											</div>
+										</div>
+									</div>
+									<div class="item-price__footer footer-price">
+										<div class="footer-price__text">24h Volume</div>
+										<div class="footer-price__volume">$ 7.02 B</div>
+									</div>
+								</div>
+							</div>
+							<div class="price__column">
+								<div class="price__item item-price">
+									<div class="item-price__body">
+										<div class="item-price__icon"><img src="img/price/bitcoin.png" alt="bitcoin"></div>
+										<div class="item-price__header">
+											<div class="item-price__currency">Bitcoin</div>
+											<div class="item-price__volume"><span>$</span> 11,354.00</div>
+										</div>
+										<div class="item-price__tabs tabs-price">
+											<div class="tabs-price__content content-price">
+												<div class="content-price__header">
+													<div class="content-price__currency">Btc/usd</div>
+													<div class="content-price__volume">-1.04%</div>
+												</div>
+												<div class="content-price__chart ibg"><img src="img/price/chart.png" alt="chart">
+												</div>
+											</div>
+											<div class="tabs-price__tab tab-nav-price">
+												<div class="tab-nav-price__item active">Hour</div>
+												<div class="tab-nav-price__item">Day</div>
+												<div class="tab-nav-price__item">Week</div>
+												<div class="tab-nav-price__item">Month</div>
+											</div>
+										</div>
+									</div>
+									<div class="item-price__footer footer-price">
+										<div class="footer-price__text">24h Volume</div>
+										<div class="footer-price__volume">$ 7.02 B</div>
+									</div>
+								</div>
+							</div>
+							<div class="price__column">
+								<div class="price__item item-price">
+									<div class="item-price__body">
+										<div class="item-price__icon"><img src="img/price/bitcoin.png" alt="bitcoin"></div>
+										<div class="item-price__header">
+											<div class="item-price__currency">Bitcoin</div>
+											<div class="item-price__volume"><span>$</span> 11,354.00</div>
+										</div>
+										<div class="item-price__tabs tabs-price">
+											<div class="tabs-price__content content-price">
+												<div class="content-price__header">
+													<div class="content-price__currency">Btc/usd</div>
+													<div class="content-price__volume">-1.04%</div>
+												</div>
+												<div class="content-price__chart ibg"><img src="img/price/chart.png" alt="chart">
+												</div>
+											</div>
+											<div class="tabs-price__tab tab-nav-price">
+												<div class="tab-nav-price__item active">Hour</div>
+												<div class="tab-nav-price__item">Day</div>
+												<div class="tab-nav-price__item">Week</div>
+												<div class="tab-nav-price__item">Month</div>
+											</div>
+										</div>
+									</div>
+									<div class="item-price__footer footer-price">
+										<div class="footer-price__text">24h Volume</div>
+										<div class="footer-price__volume">$ 7.02 B</div>
+									</div>
+								</div>
+							</div>
 						</div>
 					</div>
 				</section>
@@ -189,6 +327,7 @@
 		</main>
 	</div>
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+	<script src="js/slick.min.js"></script>
 	<script src="js/script.js"></script>
 </body>
 
