--- a/src/index.html
+++ b/src/index.html
@@ -126,8 +126,8 @@
 				<section class="price">
 					<div class="price__container container">
 						<div class="price__header">
-							<div class="price__title title">Cryptocurrency Price Capitalizations</div>
-							<div class="price__text"> Cras mattis consectetur purus sit amet fermentum. Cras justo odio,
+							<h2 class="price__title title">Cryptocurrency Price Capitalizations</h2>
+							<div class="price__text text"> Cras mattis consectetur purus sit amet fermentum. Cras justo odio,
 								dapibus
 								ac facilisis in, egestas eget quam praesent commodo cursus magna.</div>
 						</div>
@@ -155,25 +155,31 @@
 												<div class="content-price__item content-price__item-1">
 													<div class="body-item-price__header">
 														<div class="body-item-price__currency">Btc/usd</div>
-														<div class="body-item-price__percent body-item-price__percent-green">+1.04%</div>
+														<div class="body-item-price__percent body-item-price__percent-green">+1.04%
+														</div>
 													</div>
-													<div class="body-item-price__img ibg"><img src="img/price/chart_2.png" alt="chart">
-													</div>
-												</div>
-												<div class="content-price__item content-price__item-1">
-													<div class="body-item-price__header">
-														<div class="body-item-price__currency">Btc/usd</div>
-														<div class="body-item-price__percent body-item-price__percent-green">+1.04%</div>
-													</div>
-													<div class="body-item-price__img ibg"><img src="img/price/chart_3.png" alt="chart">
+													<div class="body-item-price__img ibg"><img src="img/price/chart_2.png"
+															alt="chart">
 													</div>
 												</div>
 												<div class="content-price__item content-price__item-1">
 													<div class="body-item-price__header">
 														<div class="body-item-price__currency">Btc/usd</div>
-														<div class="body-item-price__percent body-item-price__percent-green">+1.04%</div>
+														<div class="body-item-price__percent body-item-price__percent-green">+1.04%
+														</div>
 													</div>
-													<div class="body-item-price__img ibg"><img src="img/price/chart_4.png" alt="chart">
+													<div class="body-item-price__img ibg"><img src="img/price/chart_3.png"
+															alt="chart">
+													</div>
+												</div>
+												<div class="content-price__item content-price__item-1">
+													<div class="body-item-price__header">
+														<div class="body-item-price__currency">Btc/usd</div>
+														<div class="body-item-price__percent body-item-price__percent-green">+1.04%
+														</div>
+													</div>
+													<div class="body-item-price__img ibg"><img src="img/price/chart_4.png"
+															alt="chart">
 													</div>
 												</div>
 											</div>
@@ -206,9 +212,11 @@
 												<div class="content-price__item content-price__item-2 active">
 													<div class="body-item-price__header">
 														<div class="body-item-price__currency">ETH/usd</div>
-														<div class="body-item-price__percent body-item-price__percent-green">+0.98%</div>
+														<div class="body-item-price__percent body-item-price__percent-green">+0.98%
+														</div>
 													</div>
-													<div class="body-item-price__img ibg"><img src="img/price/chart_2.png" alt="chart">
+													<div class="body-item-price__img ibg"><img src="img/price/chart_2.png"
+															alt="chart">
 													</div>
 												</div>
 												<div class="content-price__item content-price__item-2">
@@ -222,17 +230,21 @@
 												<div class="content-price__item content-price__item-2">
 													<div class="body-item-price__header">
 														<div class="body-item-price__currency">ETH/usd</div>
-														<div class="body-item-price__percent body-item-price__percent-green">+1.04%</div>
+														<div class="body-item-price__percent body-item-price__percent-green">+1.04%
+														</div>
 													</div>
-													<div class="body-item-price__img ibg"><img src="img/price/chart_3.png" alt="chart">
+													<div class="body-item-price__img ibg"><img src="img/price/chart_3.png"
+															alt="chart">
 													</div>
 												</div>
 												<div class="content-price__item content-price__item-2">
 													<div class="body-item-price__header">
 														<div class="body-item-price__currency">ETH/usd</div>
-														<div class="body-item-price__percent body-item-price__percent-green">+1.04%</div>
+														<div class="body-item-price__percent body-item-price__percent-green">+1.04%
+														</div>
 													</div>
-													<div class="body-item-price__img ibg"><img src="img/price/chart_4.png" alt="chart">
+													<div class="body-item-price__img ibg"><img src="img/price/chart_4.png"
+															alt="chart">
 													</div>
 												</div>
 											</div>
@@ -265,17 +277,21 @@
 												<div class="content-price__item content-price__item-3 active">
 													<div class="body-item-price__header">
 														<div class="body-item-price__currency">xrp/usd</div>
-														<div class="body-item-price__percent  body-item-price__percent-green">+18.37%</div>
+														<div class="body-item-price__percent  body-item-price__percent-green">+18.37%
+														</div>
 													</div>
-													<div class="body-item-price__img ibg"><img src="img/price/chart_3.png" alt="chart">
+													<div class="body-item-price__img ibg"><img src="img/price/chart_3.png"
+															alt="chart">
 													</div>
 												</div>
 												<div class="content-price__item content-price__item-3">
 													<div class="body-item-price__header">
 														<div class="body-item-price__currency">xrp/usd</div>
-														<div class="body-item-price__percent body-item-price__percent-green">+1.04%</div>
+														<div class="body-item-price__percent body-item-price__percent-green">+1.04%
+														</div>
 													</div>
-													<div class="body-item-price__img ibg"><img src="img/price/chart_2.png" alt="chart">
+													<div class="body-item-price__img ibg"><img src="img/price/chart_2.png"
+															alt="chart">
 													</div>
 												</div>
 												<div class="content-price__item content-price__item-3">
@@ -289,9 +305,11 @@
 												<div class="content-price__item content-price__item-3">
 													<div class="body-item-price__header">
 														<div class="body-item-price__currency">xrp/usd</div>
-														<div class="body-item-price__percent body-item-price__percent-green">+1.04%</div>
+														<div class="body-item-price__percent body-item-price__percent-green">+1.04%
+														</div>
 													</div>
-													<div class="body-item-price__img ibg"><img src="img/price/chart_4.png" alt="chart">
+													<div class="body-item-price__img ibg"><img src="img/price/chart_4.png"
+															alt="chart">
 													</div>
 												</div>
 											</div>
@@ -324,25 +342,31 @@
 												<div class="content-price__item content-price__item-4 active">
 													<div class="body-item-price__header">
 														<div class="body-item-price__currency">ADA/usd</div>
-														<div class="body-item-price__percent body-item-price__percent-green">+9.38%</div>
+														<div class="body-item-price__percent body-item-price__percent-green">+9.38%
+														</div>
 													</div>
-													<div class="body-item-price__img ibg"><img src="img/price/chart_4.png" alt="chart">
-													</div>
-												</div>
-												<div class="content-price__item content-price__item-4">
-													<div class="body-item-price__header">
-														<div class="body-item-price__currency">ADA/usd</div>
-														<div class="body-item-price__percent body-item-price__percent-green">+1.04%</div>
-													</div>
-													<div class="body-item-price__img ibg"><img src="img/price/chart_2.png" alt="chart">
+													<div class="body-item-price__img ibg"><img src="img/price/chart_4.png"
+															alt="chart">
 													</div>
 												</div>
 												<div class="content-price__item content-price__item-4">
 													<div class="body-item-price__header">
 														<div class="body-item-price__currency">ADA/usd</div>
-														<div class="body-item-price__percent body-item-price__percent-green">+1.04%</div>
+														<div class="body-item-price__percent body-item-price__percent-green">+1.04%
+														</div>
 													</div>
-													<div class="body-item-price__img ibg"><img src="img/price/chart_3.png" alt="chart">
+													<div class="body-item-price__img ibg"><img src="img/price/chart_2.png"
+															alt="chart">
+													</div>
+												</div>
+												<div class="content-price__item content-price__item-4">
+													<div class="body-item-price__header">
+														<div class="body-item-price__currency">ADA/usd</div>
+														<div class="body-item-price__percent body-item-price__percent-green">+1.04%
+														</div>
+													</div>
+													<div class="body-item-price__img ibg"><img src="img/price/chart_3.png"
+															alt="chart">
 													</div>
 												</div>
 												<div class="content-price__item content-price__item-4">
@@ -429,6 +453,74 @@
 							</div> -->
 						</div>
 					</div>
+				</section>
+				<section class="promotions">
+					<div class="promotions__header">
+						<h2 class="promotions__title title title-w">Promotions Announcement</h2>
+						<div class="promotions__text text text-w">Cras mattis consectetur purus sit amet fermentum. Cras justo
+							odio, dapibus ac facilisis in, egestas eget quam praesent commodo cursus magna.</div>
+					</div>
+					<div class="promotions__row">
+						<div class="promotions__column">
+							<div class="promotions__video">
+								<iframe src="https://www.youtube.com/embed/M5QY2_8704o"
+									title="Музика Chillstep для програмування / Кібер / Кодування" frameborder="0"
+									allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+									allowfullscreen></iframe>
+							</div>
+							<div class="promotions__text">BCH Trading Pairs Open On BitMin With Big Promotions</div>
+						</div>
+						<div class="promotions__column">
+							<div class="promotions__video">
+								<iframe src="https://www.youtube.com/embed/tlUcmD0zPI4"
+									title="Чудова музика для зосередженості та творчості - Суміш глибокої концентрації"
+									frameborder="0"
+									allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+									allowfullscreen></iframe>
+							</div>
+							<div class="promotions__text">Bitclave Gets Listed On BitMin With Promotion For Users</div>
+						</div>
+						<div class="promotions__column">
+							<div class="promotions__video">
+								<iframe src="https://www.youtube.com/embed/HlAJHkiRGTI"
+									title="Темна електронна музика - Майбутній гараж для кодування, програмування, злому"
+									frameborder="0"
+									allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+									allowfullscreen></iframe>
+							</div>
+							<div class="promotions__text"> Announcement regarding Vote To List round 3</div>
+						</div>
+						<div class="promotions__column">
+							<div class="promotions__video">
+								<iframe src="https://www.youtube.com/embed/PNhQakLdI9o"
+									title="Best Music Of Hacking Your Mind_v.02 (90 minutes of reading, learning, studying, programming)"
+									frameborder="0"
+									allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+									allowfullscreen></iframe>
+							</div>
+							<div class="promotions__text">Selfkey Will Get Listed On BitMin</div>
+						</div>
+						<div class="promotions__column">
+							<div class="promotions__video">
+								<iframe src="https://www.youtube.com/embed/C4MpzSMkinw"
+									title="Продуктивність музики - максимальна ефективність для творців, програмістів, дизайнерів"
+									frameborder="0"
+									allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+									allowfullscreen></iframe>
+							</div>
+							<div class="promotions__text">Canya Is Getting Listed On BitMin With A Special Promotion</div>
+						</div>
+						<div class="promotions__column">
+							<div class="promotions__video">
+								<iframe src="https://www.youtube.com/embed/GU8iOG64atQ"
+									title="Робоча музика - Радіо Deep Chillstep" frameborder="0"
+									allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+									allowfullscreen></iframe>
+							</div>
+							<div class="promotions__text">QLink On Bitmin: Trading Starts On January 29 2018</div>
+						</div>
+					</div>
+					<button class="promotions__button btn">View all announcement</button>
 				</section>
 			</div>
 			<footer class="footer">
