--- a/src/index.html
+++ b/src/index.html
@@ -522,6 +522,78 @@
 					</div>
 					<button class="promotions__button btn">View all announcement</button>
 				</section>
+				<section class="why">
+					<div class="why__top top-why">
+						<div class="top-why__column">
+							<div class="top-why__img"><img src="img/why/shape_01.png" alt="shape"></div>
+						</div>
+						<div class="top-why__column">
+							<div class="top-why__item item-why">
+								<div class="item-why__header">
+									<h2 class="item-why__title title">Why choose Bitmin?</h2>
+									<div class="item-why__text text">Morbi leo risus, porta ac consectetur ac, vestibulum at
+										eros. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut
+										fermentum massa justo sit amet risus. </div>
+								</div>
+								<div class="item-why__reason reason-item-why ">
+									<div class="reason-item-why__column"><img src="img/icons/Shape_1.svg" alt="shape"></div>
+									<div class="reason-item-why__column">
+										<div class="reason-item-why__title title">Marketplace on blockchain</div>
+										<div class="reason-item-why__text text">Blockchain is the world's leading software platform
+											for
+											digital assets. Offering the largest production block chain platform in the world,
+											we
+											are using new technology to build a radically better financial system.</div>
+									</div>
+								</div>
+								<div class="item-why__reason reason-item-why ">
+									<div class="reason-item-why__column"><img src="img/icons/Shape_2.svg" alt="shape"></div>
+									<div class="reason-item-why__column">
+										<div class="reason-item-why__title title">Open source</div>
+										<div class="reason-item-why__text text">Bitmin is completely open source. Over a dozen
+											individuals have contributed to Bitmin's software, and there is an active community
+											building innovative applications on top of the Bitmin API.;</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="why__bottom bottom-why">
+						
+						<div class="bottom-why__column">
+							<div class="bottom-why__item item-why">
+								<div class="item-why__header">
+									<h2 class="item-why__title title">Digital Currency Evolution</h2>
+									<div class="item-why__text text">Morbi leo risus, porta ac consectetur ac, vestibulum at
+										eros. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut
+										fermentum massa justo sit amet risus. </div>
+								</div>
+								<div class="item-why__reason reason-item-why ">
+									<div class="reason-item-why__column"><img src="img/icons/Shape_3.svg" alt="shape"></div>
+									<div class="reason-item-why__column">
+										<div class="reason-item-why__title title">Completely private</div>
+										<div class="reason-item-why__text text">Bitmin splits apart, encrypts, and distributes your
+											files across a decentralized network. Since you hold the keys, you own your data. No
+											outside company can access or control your files, unlike traditional cloud storage
+											providers.</div>
+									</div>
+								</div>
+								<div class="item-why__reason reason-item-why ">
+									<div class="reason-item-why__column"><img src="img/icons/Shape_4.svg" alt="shape"></div>
+									<div class="reason-item-why__column">
+										<div class="reason-item-why__title title">Ultra-fast transactions</div>
+										<div class="reason-item-why__text text">Transaction speeds are ultra-fast compared to other
+											coins. Simple Payment Verification (SPV) technology allows average transaction
+											confirmation times to drop to ~5 seconds.</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="bottom-why__column">
+							<div class="bottom-why__img"><img src="img/why/shape_02.png" alt="shape"></div>
+						</div>
+					</div>
+				</section>
 			</div>
 			<footer class="footer">
 			</footer>
