--- a/src/index.html
+++ b/src/index.html
@@ -539,7 +539,8 @@
 									<div class="reason-item-why__column"><img src="img/icons/Shape_1.svg" alt="shape"></div>
 									<div class="reason-item-why__column">
 										<div class="reason-item-why__title title">Marketplace on blockchain</div>
-										<div class="reason-item-why__text text">Blockchain is the world's leading software platform
+										<div class="reason-item-why__text text">Blockchain is the world's leading software
+											platform
 											for
 											digital assets. Offering the largest production block chain platform in the world,
 											we
@@ -559,7 +560,7 @@
 						</div>
 					</div>
 					<div class="why__bottom bottom-why">
-						
+
 						<div class="bottom-why__column">
 							<div class="bottom-why__item item-why">
 								<div class="item-why__header">
@@ -572,7 +573,8 @@
 									<div class="reason-item-why__column"><img src="img/icons/Shape_3.svg" alt="shape"></div>
 									<div class="reason-item-why__column">
 										<div class="reason-item-why__title title">Completely private</div>
-										<div class="reason-item-why__text text">Bitmin splits apart, encrypts, and distributes your
+										<div class="reason-item-why__text text">Bitmin splits apart, encrypts, and distributes
+											your
 											files across a decentralized network. Since you hold the keys, you own your data. No
 											outside company can access or control your files, unlike traditional cloud storage
 											providers.</div>
@@ -582,7 +584,8 @@
 									<div class="reason-item-why__column"><img src="img/icons/Shape_4.svg" alt="shape"></div>
 									<div class="reason-item-why__column">
 										<div class="reason-item-why__title title">Ultra-fast transactions</div>
-										<div class="reason-item-why__text text">Transaction speeds are ultra-fast compared to other
+										<div class="reason-item-why__text text">Transaction speeds are ultra-fast compared to
+											other
 											coins. Simple Payment Verification (SPV) technology allows average transaction
 											confirmation times to drop to ~5 seconds.</div>
 									</div>
@@ -593,6 +596,91 @@
 							<div class="bottom-why__img"><img src="img/why/shape_02.png" alt="shape"></div>
 						</div>
 					</div>
+				</section>
+				<section class="roadmap">
+					<div class="roadmap__container container">
+						<div class="roadmap__header">
+							<h2 class="roadmap__title title title-w">Roadmap</h2>
+							<div class="roadmap__text text text-w">Cras mattis consectetur purus sit amet fermentum. Cras justo
+								odio, dapibus ac facilisis in, egestas eget quam praesent commodo cursus magna.</div>
+						</div>
+						<div class="roadmap__top top-roadmap">
+							<div class="top-roadmap__column">
+								<div class="top-roadmap__item item-roadmap">
+									<div class="item-roadmap__date">January 19 2018</div>
+									<div class="item-roadmap__title">concept design</div>
+									<div class="item-roadmap__text">Maecenas sed diam eget risus varius blandit sit amet non
+										magna. Etiam porta sem malesuada magna mollis euismod.</div>
+									<div class="item-roadmap__icon item-roadmap__icon-bottom"><img src="img/roadmap_down.png"
+											alt="roadmapicon"></div>
+								</div>
+							</div>
+							<div class="top-roadmap__column">
+								<div class="top-roadmap__item item-roadmap">
+									<div class="item-roadmap__date">March 22 2018</div>
+									<div class="item-roadmap__title">Design Blocklet</div>
+									<div class="item-roadmap__text">Maecenas sed diam eget risus varius blandit sit amet non
+										magna. Etiam porta sem malesuada magna mollis euismod.</div>
+									<div class="item-roadmap__icon item-roadmap__icon-bottom"><img src="img/roadmap_down.png"
+											alt="roadmapicon"></div>
+								</div>
+							</div>
+							<div class="top-roadmap__column">
+								<div class="top-roadmap__item item-roadmap">
+									<div class="item-roadmap__date">June 08 2018</div>
+									<div class="item-roadmap__title">Token sale events</div>
+									<div class="item-roadmap__text">Maecenas sed diam eget risus varius blandit sit amet non
+										magna. Etiam porta sem malesuada magna mollis euismod.</div>
+									<div class="item-roadmap__icon item-roadmap__icon-bottom"><img src="img/roadmap_down.png"
+											alt="roadmapicon"></div>
+								</div>
+							</div>
+							<div class="top-roadmap__column">
+								<div class="top-roadmap__item item-roadmap">
+									<div class="item-roadmap__date">October 11 2018</div>
+									<div class="item-roadmap__title">First public release</div>
+									<div class="item-roadmap__text">Maecenas sed diam eget risus varius blandit sit amet non
+										magna. Etiam porta sem malesuada magna mollis euismod.</div>
+									<div class="item-roadmap__icon item-roadmap__icon-bottom"><img src="img/roadmap_down.png"
+											alt="roadmapicon"></div>
+								</div>
+							</div>
+						</div>
+						<div class="roadmap__divider"><img src="img/roadmap__line.png" alt="roadmap__line"></div>
+						<div class="roadmap__bottom bottom-roadmap">
+							<div class="bottom-roadmap__column">
+								<div class="bottom-roadmap__item item-roadmap">
+									<div class="item-roadmap__icon item-roadmap__icon-top"><img src="img/roadmap_up.png"
+											alt="roadmapicon"></div>
+									<div class="item-roadmap__date">February 29 2018</div>
+									<div class="item-roadmap__title">Open Chain Access</div>
+									<div class="item-roadmap__text">Maecenas sed diam eget risus varius blandit sit amet non
+										magna. Etiam porta sem malesuada magna mollis euismod.</div>
+								</div>
+							</div>
+							<div class="bottom-roadmap__column">
+								<div class="bottom-roadmap__item item-roadmap">
+									<div class="item-roadmap__icon item-roadmap__icon-top"><img src="img/roadmap_up.png"
+											alt="roadmapicon"></div>
+									<div class="item-roadmap__date">April 11 2018</div>
+									<div class="item-roadmap__title">Hyperledger Adaptor</div>
+									<div class="item-roadmap__text">Maecenas sed diam eget risus varius blandit sit amet non
+										magna. Etiam porta sem malesuada magna mollis euismod.</div>
+								</div>
+							</div>
+							<div class="bottom-roadmap__column">
+								<div class="bottom-roadmap__item item-roadmap">
+									<div class="item-roadmap__icon item-roadmap__icon-top"><img src="img/roadmap_up.png"
+											alt="roadmapicon"></div>
+									<div class="item-roadmap__date">September 29 2018</div>
+									<div class="item-roadmap__title">bitmin platform</div>
+									<div class="item-roadmap__text">Maecenas sed diam eget risus varius blandit sit amet non
+										magna. Etiam porta sem malesuada magna mollis euismod.</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="roadmap__img ibg"><img src="img/roadmap_bg.png" alt="roadmap_bg"></div>
 				</section>
 			</div>
 			<footer class="footer">
