--- a/src/index.html
+++ b/src/index.html
@@ -201,7 +201,7 @@
 								<div class="price__item item-price">
 									<div class="item-price__wrapper">
 										<div class="item-price__icon">
-											<img src="img/price/Ethereum.png" alt="Ethereum">
+											<img src="img/price/ethereum.png" alt="Ethereum">
 										</div>
 										<div class="item-price__header">
 											<div class="item-price__currency">Ethereum</div>
@@ -266,7 +266,7 @@
 								<div class="price__item item-price">
 									<div class="item-price__wrapper">
 										<div class="item-price__icon">
-											<img src="img/price/Ripple.png" alt="Ripple">
+											<img src="img/price/ripple.png" alt="Ripple">
 										</div>
 										<div class="item-price__header">
 											<div class="item-price__currency">Ripple</div>
@@ -331,7 +331,7 @@
 								<div class="price__item item-price">
 									<div class="item-price__wrapper">
 										<div class="item-price__icon">
-											<img src="img/price/Cardano.png" alt="Cardano">
+											<img src="img/price/cardano.png" alt="Cardano">
 										</div>
 										<div class="item-price__header">
 											<div class="item-price__currency">Cardano</div>
@@ -648,7 +648,7 @@
 						</div>
 						<div class="roadmap__divider"><img src="img/roadmap__line.png" alt="roadmap__line"></div>
 						<div class="roadmap__bottom bottom-roadmap">
-							<div class="bottom-roadmap__column">
+							<div data-da=".top-roadmap,1020.98,1" class="bottom-roadmap__column">
 								<div class="bottom-roadmap__item item-roadmap">
 									<div class="item-roadmap__icon item-roadmap__icon-top"><img src="img/roadmap_up.png"
 											alt="roadmapicon"></div>
@@ -658,7 +658,7 @@
 										magna. Etiam porta sem malesuada magna mollis euismod.</div>
 								</div>
 							</div>
-							<div class="bottom-roadmap__column">
+							<div data-da=".top-roadmap,1020.98,2" class="bottom-roadmap__column">
 								<div class="bottom-roadmap__item item-roadmap">
 									<div class="item-roadmap__icon item-roadmap__icon-top"><img src="img/roadmap_up.png"
 											alt="roadmapicon"></div>
@@ -668,7 +668,7 @@
 										magna. Etiam porta sem malesuada magna mollis euismod.</div>
 								</div>
 							</div>
-							<div class="bottom-roadmap__column">
+							<div data-da=".top-roadmap,1020.98,3" class="bottom-roadmap__column">
 								<div class="bottom-roadmap__item item-roadmap">
 									<div class="item-roadmap__icon item-roadmap__icon-top"><img src="img/roadmap_up.png"
 											alt="roadmapicon"></div>
