--- a/src/index.html
+++ b/src/index.html
@@ -682,6 +682,64 @@
 					</div>
 					<div class="roadmap__img ibg"><img src="img/roadmap_bg.png" alt="roadmap_bg"></div>
 				</section>
+				<section class="timer">
+					<div class="timer__container container">
+						<div class="timer__row">
+							<div class="timer__column">
+								<div class="timer__ico ico-timer">
+									<div class="ico-timer__icon"><img src="img/ico/ico_icon.png" alt="ico_icon"></div>
+									<div class="ico-timer__title title">ICO Landing Page for your cryptocurrency project!</div>
+									<div class="ico-timer__text text">Morbi leo risus, porta ac consectetur ac vestibulum at
+										eros. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut
+										fermentum massa amet risus.
+									</div>
+								</div>
+							</div>
+							<div class="timer__column">
+								<div class="timer__bitmin bitmin-timer">
+									<div class="bitmin-timer__title">Bitmin Token Distribution Ends In :</div>
+									<div class="bitmin-timer__timer">01:20:36:58</div>
+									<div class="bitmin-timer__item item-timer">
+										<div class="item-timer__header">
+											<div class="item-timer__lowposition">0 Bitmin</div>
+											<div class="item-timer__maxposition">100,000,000 Bitmin</div>
+										</div>
+										<div class="item-timer__line">
+											<span></span>
+										</div>
+										<div class="item-timer__footer">
+											<div class="item-timer__current">4,000,000 <span>Current Distribution Bitmin</span>
+											</div>
+											<div class="item-timer__bid">6.071<span>BTC Received</span>
+											</div>
+										</div>
+									</div>
+								</div>
+								<button class="timer__button btn">Buy bitmin tokens</button>
+							</div>
+						</div>
+						<div class="timer__companies companies-timer">
+							<div class="companies-timer__item">
+								<div class="companies-timer__img"><img src="img/ico/companies_01.png" alt="companies_logo"></div>
+							</div>
+							<div class="companies-timer__item">
+								<div class="companies-timer__img"><img src="img/ico/companies_02.png" alt="companies_logo"></div>
+							</div>
+							<div class="companies-timer__item">
+								<div class="companies-timer__img"><img src="img/ico/companies_03.png" alt="companies_logo"></div>
+							</div>
+							<div class="companies-timer__item">
+								<div class="companies-timer__img"><img src="img/ico/companies_04.png" alt="companies_logo"></div>
+							</div>
+							<div class="companies-timer__item">
+								<div class="companies-timer__img"><img src="img/ico/companies_05.png" alt="companies_logo"></div>
+							</div>
+							<div class="companies-timer__item">
+								<div class="companies-timer__img"><img src="img/ico/companies_06.png" alt="companies_logo"></div>
+							</div>
+						</div>
+					</div>
+				</section>
 			</div>
 			<footer class="footer">
 			</footer>
