--- a/src/index.html
+++ b/src/index.html
@@ -688,7 +688,7 @@
 							<div class="timer__column">
 								<div class="timer__ico ico-timer">
 									<div class="ico-timer__icon"><img src="img/ico/ico_icon.png" alt="ico_icon"></div>
-									<div class="ico-timer__title title">ICO Landing Page for your cryptocurrency project!</div>
+									<h2 class="ico-timer__title title">ICO Landing Page for your cryptocurrency project!</h2>
 									<div class="ico-timer__text text">Morbi leo risus, porta ac consectetur ac vestibulum at
 										eros. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut
 										fermentum massa amet risus.
@@ -720,22 +720,55 @@
 						</div>
 						<div class="timer__companies companies-timer">
 							<div class="companies-timer__item">
-								<div class="companies-timer__img"><img src="img/ico/companies_01.png" alt="companies_logo"></div>
+								<div class="companies-timer__img"><img src="img/ico/companies_01.png" alt="companies_logo">
+								</div>
 							</div>
 							<div class="companies-timer__item">
-								<div class="companies-timer__img"><img src="img/ico/companies_02.png" alt="companies_logo"></div>
+								<div class="companies-timer__img"><img src="img/ico/companies_02.png" alt="companies_logo">
+								</div>
 							</div>
 							<div class="companies-timer__item">
-								<div class="companies-timer__img"><img src="img/ico/companies_03.png" alt="companies_logo"></div>
+								<div class="companies-timer__img"><img src="img/ico/companies_03.png" alt="companies_logo">
+								</div>
 							</div>
 							<div class="companies-timer__item">
-								<div class="companies-timer__img"><img src="img/ico/companies_04.png" alt="companies_logo"></div>
+								<div class="companies-timer__img"><img src="img/ico/companies_04.png" alt="companies_logo">
+								</div>
 							</div>
 							<div class="companies-timer__item">
-								<div class="companies-timer__img"><img src="img/ico/companies_05.png" alt="companies_logo"></div>
+								<div class="companies-timer__img"><img src="img/ico/companies_05.png" alt="companies_logo">
+								</div>
 							</div>
 							<div class="companies-timer__item">
-								<div class="companies-timer__img"><img src="img/ico/companies_06.png" alt="companies_logo"></div>
+								<div class="companies-timer__img"><img src="img/ico/companies_06.png" alt="companies_logo">
+								</div>
+							</div>
+						</div>
+					</div>
+				</section>
+				<section class="started">
+					<div class="started__row">
+						<div class="started__column">
+							<div class="started__item item-started">
+								<div class="item-started__icon"><img src="img/started/started_icon_01.png"
+										alt="started_icon"></div>
+								<div class="item-started__title title title-w">Get Started with Bitmin</div>
+								<div class="item-started__text">Bitmin is securely stored in a wallet on your computer, tablet,
+									phone or laptop. Download yours and start sending and receiving payments with an address and
+									a click.</div>
+								<button class="item-started__button btn btn-w">Bitmin wallet</button>
+								<div class="item-started__img ibg"><img src="img/started/started_bg_01.png" alt="started_bg"></div>
+							</div>
+						</div>
+						<div class="started__column">
+							<div class="started__item item-started">
+								<div class="item-started__icon"><img src="img/started/started_icon_02.png"
+										alt="started_icon"></div>
+								<div class="item-started__title title title-w">If you are a developer</div>
+								<div class="item-started__text">Participate in our project, get BITMIN for development testing,
+									or view our technical documentation</div>
+								<button class="item-started__button btn btn-w">Go to developer page</button>
+								<div class="item-started__img ibg"><img src="img/started/started_bg_02.png" alt="started_bg"></div>
 							</div>
 						</div>
 					</div>
