--- a/src/index.html
+++ b/src/index.html
@@ -750,25 +750,66 @@
 					<div class="started__row">
 						<div class="started__column">
 							<div class="started__item item-started">
-								<div class="item-started__icon"><img src="img/started/started_icon_01.png"
-										alt="started_icon"></div>
+								<div class="item-started__icon"><img src="img/started/started_icon_01.png" alt="started_icon">
+								</div>
 								<div class="item-started__title title title-w">Get Started with Bitmin</div>
 								<div class="item-started__text">Bitmin is securely stored in a wallet on your computer, tablet,
 									phone or laptop. Download yours and start sending and receiving payments with an address and
 									a click.</div>
 								<button class="item-started__button btn btn-w">Bitmin wallet</button>
-								<div class="item-started__img ibg"><img src="img/started/started_bg_01.png" alt="started_bg"></div>
+								<div class="item-started__img ibg"><img src="img/started/started_bg_01.png" alt="started_bg">
+								</div>
 							</div>
 						</div>
 						<div class="started__column">
 							<div class="started__item item-started">
-								<div class="item-started__icon"><img src="img/started/started_icon_02.png"
-										alt="started_icon"></div>
+								<div class="item-started__icon"><img src="img/started/started_icon_02.png" alt="started_icon">
+								</div>
 								<div class="item-started__title title title-w">If you are a developer</div>
 								<div class="item-started__text">Participate in our project, get BITMIN for development testing,
 									or view our technical documentation</div>
 								<button class="item-started__button btn btn-w">Go to developer page</button>
-								<div class="item-started__img ibg"><img src="img/started/started_bg_02.png" alt="started_bg"></div>
+								<div class="item-started__img ibg"><img src="img/started/started_bg_02.png" alt="started_bg">
+								</div>
+							</div>
+						</div>
+					</div>
+				</section>
+				<section class="news">
+					<div class="news__container container">
+						<div class="news__header">
+							<h2 class="news__title title">Latest News</h2>
+							<div class="news__text text"> Cras mattis consectetur purus sit amet fermentum. Cras justo odio,
+								dapibus
+								ac facilisis in, egestas eget quam praesent commodo cursus magna.</div>
+						</div>
+						<div class="news__row">
+							<div class="news__column">
+								<a href="#" class="news__item item-news">
+									<div class="item-news__img ibg"><img src="img/started/started_bg_01.png" alt="news_image">
+									</div>
+									<div class="item-news__category item-news__category-b">Sponsored</div>
+									<div class="item-news__text"> A Platform Paves New Way of Making Investment.</div>
+									<div class="item-news__date">December 01, 2018</div>
+								</a>
+							</div>
+							<div class="news__column">
+								<a href="#" class="news__item item-news">
+									<div class="item-news__img ibg"><img src="img/started/started_bg_02.png" alt="news_image">
+									</div>
+									<div class="item-news__category item-news__category-p">News</div>
+									<div class="item-news__text">Singapore Confirms It Will Not ‘Ban’ Cryptocurrency, Has No
+										‘Risk Concerns’</div>
+									<div class="item-news__date">December 18, 2018</div>
+								</a>
+							</div>
+							<div class="news__column">
+								<a href="#" class="news__item item-news">
+									<div class="item-news__img ibg"><img src="img/roadmap_bg.png" alt="news_image"></div>
+									<div class="item-news__category item-news__category-g">Analysis</div>
+									<div class="item-news__text">Text: Coinbase Crypto Exchange To Roll Out Long-Awaited SegWit Upgrade In ‘Few Weeks’.</div>
+									<div class="item-news__date">December 12, 2017</div>
+								</a>
 							</div>
 						</div>
 					</div>
