--- a/src/index.html
+++ b/src/index.html
@@ -814,6 +814,17 @@
 						</div>
 					</div>
 				</section>
+				<section class="digital">
+					<div class="digital__container container">
+						<div class="digital__header">
+							<h2 class="digital__title">Bitmin Private <span>Digital Currency</span></h2>
+							<div class="digital__text">Bitmin is a secure, private, and untraceable cryptocurrency. It is open-source and accessible to all.</div>
+						</div>
+						<button class="digital__button btn">Get started</button>
+						<a href="tel:+1200989081" class="digital__call">call us : +(1200) 989 - 081</a>
+						<div class="digital__subtext">For any question or concern</div>
+					</div>
+				</section>
 			</div>
 			<footer class="footer">
 			</footer>
